--- a/client/src/components/modstyle.css
+++ b/client/src/components/modstyle.css
@@ -457,5 +457,6 @@
 }
 
 .sizeLabel:hover {
-  box-shadow: 0px 0px 1px 1px black;
+  border: 1px solid #111;
+  box-shadow: 0px 0px 0px 1px #e5e5e5;
 }
